# AI_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/cli/: dispatcher.cpp  dispatcher.h  line_editor.cpp  line_editor.h  stream_printer.h  terminal.cpp  terminal.h  theme.cpp  theme.h
src/commands/: app_context.h  cmd_clear.cpp  cmd_clear.h  cmd_config.cpp  cmd_config.h  cmd_exit.cpp  cmd_exit.h  cmd_help.cpp  cmd_help.h  cmd_history.cpp  cmd_history.h  cmd_language.cpp  cmd_language.h  cmd_model.cpp  cmd_model.h  cmd_plan.cpp  cmd_plan.h  cmd_resume.cpp  cmd_resume.h  cmd_tools.cpp  cmd_tools.h  cmd_workflow.cpp  cmd_workflow.h  command_registry.cpp  command_registry.h  icommand.h
src/core/agent/: AgentSession.cpp  AgentSession.h
src/core/config/: AppConfig.cpp  AppConfig.h  Paths.cpp  Paths.h  ProviderFactory.cpp  ProviderFactory.h
src/core/llm/: ILLMProvider.h  IStreamFrameParser.h  NdjsonFrameParser.h  Schema.h  Serialization.cpp  Serialization.h  SseFrameParser.h
src/core/net/: CancelToken.cpp  CancelToken.h  HttpClient.cpp  HttpClient.h
src/core/permissions/: DefaultPermissionManager.cpp  DefaultPermissionManager.h  IPermissionManager.h  ReadOnlyPermissionManager.h
src/core/session/: Session.h  SessionStore.cpp  SessionStore.h
src/core/tools/: BashTool.cpp  BashTool.h  EditFileTool.cpp  EditFileTool.h  FileTracker.cpp  FileTracker.h  FsUtil.h  GlobTool.cpp  GlobTool.h  GrepTool.cpp  GrepTool.h  ITool.h  LineDiff.cpp  LineDiff.h  ReadFileTool.cpp  ReadFileTool.h  ToolRegistry.cpp  ToolRegistry.h  WriteFileTool.cpp  WriteFileTool.h
src/core/workflow/: WorkflowEngine.cpp  WorkflowEngine.h  WorkflowSpec.cpp  WorkflowSpec.h  WorkflowStore.cpp  WorkflowStore.h
src/i18n/: Language.h  Translator.cpp  Translator.h  catalog_en.cpp  catalog_tr.cpp  catalogs.h
src/modes/: app_mode.h
src/providers/ollama/: OllamaProvider.cpp  OllamaProvider.h
src/providers/openai/: OpenAIProvider.cpp  OpenAIProvider.h
tools/: open-vscode.bat
